--- a/style/index.css
+++ b/style/index.css
@@ -199,8 +199,59 @@ body {
   background-position: center;
   padding: 20px;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+.ContactMe h2 {
+  color: darkcyan;
+  text-align: center;
+  font-size: 1.2em;
+  text-align: center;
+  justify-content: center;
+  text-decoration: underline;
+}
+
 .Form {
   position: relative;
   z-index: 1;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 600px;
+  border: 1px solid black;
+  background-color: beige;
+}
+
+.Form label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+Form input[type="text"],
+.Form input[type="tel"],
+.Form input[type="email"],
+.Form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.Form input[type="submit"] {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.Form input[type="submit"]:hover {
+  background-color: #0056b3;
 }
