--- a/style/index.css
+++ b/style/index.css
@@ -197,8 +197,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  padding: 20px;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -234,7 +233,7 @@ Form input[type="text"],
 .Form input[type="tel"],
 .Form input[type="email"],
 .Form textarea {
-  width: 100%;
+  width: 70%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -244,8 +243,8 @@ Form input[type="text"],
 .Form input[type="submit"] {
   padding: 10px 20px;
   border: none;
-  border-radius: 5px;
-  background-color: #007bff;
+  border-radius: 30px;
+  background-color: darkcyan;
   color: white;
   font-size: 16px;
   cursor: pointer;
@@ -253,5 +252,5 @@ Form input[type="text"],
 }
 
 .Form input[type="submit"]:hover {
-  background-color: #0056b3;
+  background-color: rgb(0, 90, 90);
 }
