--- a/style/index.css
+++ b/style/index.css
@@ -166,6 +166,7 @@ body {
   border-radius: 30px;
   margin: 5px;
   padding: 10px;
+  box-shadow: 0 0 1px black;
 }
 
 .ProjectBotton {
@@ -191,7 +192,7 @@ body {
 }
 
 .Contact {
-  position: relative;
+  /*  */
   background-image: url("Images/EmailBackgroundPicture.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -202,6 +203,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .ContactMe h2 {
   color: darkcyan;
   text-align: center;
@@ -253,4 +255,24 @@ Form input[type="text"],
 
 .Form input[type="submit"]:hover {
   background-color: rgb(0, 90, 90);
+}
+
+.SocialMediaBar {
+  display: flex;
+  height: 40px;
+  width: 0 auto;
+  background-color: darkcyan;
+  color: white;
+  justify-content: space-around;
+  align-items: center;
+}
+.SocialMediaBar svg {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+.Footer {
+  background-color: black;
+  color: darkcyan;
+  font-size: 10pt;
 }
