--- a/style/index.css
+++ b/style/index.css
@@ -42,6 +42,7 @@ body {
   margin: 5px;
   box-shadow: 0 0 15px;
   border: 1 solid black;
+  box-shadow: 0 0 10px darkcyan;
 }
 
 .NavBar {
@@ -204,7 +205,7 @@ body {
 }
 
 .Contact {
-  background-image: url("Images/EmailBackgroundPicture.jpg ");
+  background-image: url("Images/EmailBackgroundPicture.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -217,6 +218,7 @@ body {
 
 .ContactMe {
   margin-top: 2%;
+  margin-bottom: 2%;
 }
 .ContactMe h2 {
   color: darkcyan;
@@ -289,6 +291,7 @@ body {
   height: 30px;
   cursor: pointer;
 }
+
 .Footer {
   background-color: black;
   color: darkcyan;
