--- a/style/index.css
+++ b/style/index.css
@@ -5,9 +5,6 @@
   text-decoration: none;
   list-style-type: none;
   font-family: "Roboto", sans-serif;
-}
-
-html {
   scroll-behavior: smooth;
 }
 
@@ -205,7 +202,7 @@ body {
 }
 
 .Contact {
-  background-image: url("Images/EmailBackgroundPicture.jpg");
+  /*   background-image: url("Images/EmailBackgroundPicture.jpg"); */
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
