--- a/projects/project4/style/index.css
+++ b/projects/project4/style/index.css
@@ -1,3 +1,4 @@
+/* The CSS of the Main page index.html */
 * {
   margin: 0;
   padding: 0;
@@ -44,7 +45,7 @@ body {
 
 .NavBar {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: stretch;
   align-items: center;
   background-color: #fff;
   box-shadow: 0 0 10px black;
@@ -54,12 +55,13 @@ body {
   color: darkcyan;
 }
 
-.NavBarFixed ul li a {
+.NavBarFixed a h3 {
   color: darkcyan;
 }
 
-.NavBarFixed ul li a:hover {
+.NavBarFixed a h3:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .Home {
@@ -68,4 +70,41 @@ body {
   padding: 10px;
   background-color: darkcyan;
   height: 200px;
+}
+
+.TechnologyPicture {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  box-shadow: 0 0 4px;
+}
+
+.TechnologyPicture img {
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 10px;
+}
+
+.SocialMediaBar {
+  display: flex;
+  height: 40px;
+  width: 0 auto;
+  background-color: darkcyan;
+  color: white;
+  justify-content: space-around;
+  align-items: center;
+}
+.SocialMediaBar svg {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.Footer {
+  background-color: black;
+  color: darkcyan;
+  font-size: 10pt;
+  bottom: 0;
 }
