--- a/projects/project2/style/index.css
+++ b/projects/project2/style/index.css
@@ -69,7 +69,29 @@ body {
   font-size: 1.5rem;
   padding: 10px;
   background-color: darkcyan;
-  height: 200px;
+  height: 230px;
+  box-shadow: 0 0 4px;
+}
+
+.ProjectButtons .button {
+  display: inline-block;
+  padding: 7px 7px;
+  margin: 5px;
+  background-color: darkcyan;
+  color: white;
+  text-align: center;
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+  border: 2px solid black;
+  box-shadow: 0 0 5px black;
+}
+
+.ProjectButtons .button:hover {
+  background-color: darkslategray;
+}
+
+.ProjectButtons {
+  margin-top: 20px;
 }
 
 .TechnologyPicture {
@@ -85,6 +107,23 @@ body {
   border-radius: 10px;
   margin: 5px;
   padding: 10px;
+}
+
+.ProjectBox {
+  background-color: darkcyan;
+  width: 0 auto;
+  height: 700px;
+  border: 2px solid black;
+  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.685);
+}
+
+.ProjectBoxImage {
+  width: 0 auto;
+  height: 400px;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 10px;
+  box-shadow: 0 0 4px;
 }
 
 .SocialMediaBar {
