--- a/projects/LandingPageProject2/project 2/index.css
+++ b/projects/LandingPageProject2/project 2/index.css
@@ -1,46 +1,68 @@
-* {
+body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  font-family: Arial, sans-serif;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
 }
 
-.LeftBox {
-  width: 0 auto;
-  /* height: 300px; */
-  justify-content: left;
-  text-align: left;
-  left: 0;
-  border: 2px solid black;
-}
-.CoffeeWallpaper {
-  position: absolute;
-  left: 0;
-  width: 40%;
-  height: 400px;
-}
-.RightBox {
-  display: flex;
-  justify-content: right;
-  right: 0;
+.left {
   width: 50%;
-  height: 0 auto;
-  background-color: rgb(0, 0, 0);
-  color: #020253;
+  height: 100%;
+  background: url('images/CoffeeWallpaperBackground.png ') no-repeat center center;
+  background-size: cover;
 }
-.FormBox {
-  background-color: darkcyan;
+
+.right {
+  width: 50%;
+  padding: 2rem;
   display: flex;
-  justify-content: right;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #f7f7f7;
 }
 
-.Form button {
-  background-color: #020253;
+h1 {
+  color: #002d62;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-size: 1rem;
+  color: #333;
+  margin-bottom: 2rem;
+}
+
+form {
+  width: 100%;
+  max-width: 400px;
+}
+
+input {
+  width: 100%;
+  padding: 0.75rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+button {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #002d62;
   color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
 }
 
-.Form input,
-.Form label {
-  background-color: #e5eeff;
-  color: #020253;
+button:hover {
+  background-color: #004080;
 }
+</style>
