--- a/projects/LandingPageProject2/project 2/index.css
+++ b/projects/LandingPageProject2/project 2/index.css
@@ -1,20 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap");
+
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Heebo", serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100vh;
 }
 
-.left {
+.LeftSide {
   width: 50%;
   height: 100%;
-  background: url('images/CoffeeWallpaperBackground.png ') no-repeat center center;
+  background: url("images/CoffeeWallpaperBackground.png ") no-repeat center
+    center;
   background-size: cover;
+  box-shadow: 2px 0 2px 0 black;
 }
 
-.right {
+.RightSide {
   width: 50%;
   padding: 2rem;
   display: flex;
@@ -26,9 +30,16 @@ body {
 }
 
 h1 {
-  color: #002d62;
-  font-size: 2rem;
-  margin-bottom: 1rem;
+  top: 271px;
+  left: 1350px;
+  width: 400px;
+  height: 63px;
+  text-align: right;
+  font: normal normal 900 43px/63px Heebo;
+  letter-spacing: 0px;
+  color: #020253;
+  opacity: 1;
+  margin-bottom: 50px;
 }
 
 p {
@@ -37,7 +48,7 @@ p {
   margin-bottom: 2rem;
 }
 
-form {
+.FormArea {
   width: 100%;
   max-width: 400px;
 }
@@ -47,22 +58,26 @@ input {
   padding: 0.75rem;
   margin-bottom: 1rem;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 2px;
   font-size: 1rem;
+  background: #e5eeff 0% 0% no-repeat padding-box;
+  justify-content: right;
+  align-items: right;
+  text-align: right;
 }
 
 button {
-  width: 100%;
+  width: 35%;
   padding: 0.75rem;
   background-color: #002d62;
   color: white;
-  border: none;
-  border-radius: 5px;
+  border: 1px solid black;
+  border-radius: 6px;
   font-size: 1rem;
   cursor: pointer;
+  justify-content: right;
 }
 
 button:hover {
   background-color: #004080;
 }
-</style>
