--- a/projects/LandingPageProject2/project 2/index.css
+++ b/projects/LandingPageProject2/project 2/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap");
 
 body {
+  direction: ltr;
   margin: 0;
   font-family: "Heebo", serif;
   display: flex;
@@ -15,7 +16,6 @@ body {
   background: url("images/CoffeeWallpaperBackground.png ") no-repeat center
     center;
   background-size: cover;
-  box-shadow: 2px 0 2px 0 black;
 }
 
 .RightSide {
@@ -26,7 +26,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #f7f7f7;
+  background-color: #fff;
 }
 
 h1 {
