--- a/projects/LandingPageProject5/project 5/style/index.css
+++ b/projects/LandingPageProject5/project 5/style/index.css
@@ -15,36 +15,109 @@ body {
   padding: 20px;
 }
 
-.header {
+.TextBox {
   text-align: center;
-  margin-bottom: 30px;
+  /*   margin-bottom: 30px; */
+  /*   top: 298px;
+  left: 969px; */
+  width: 15%;
+  height: 25%;
+  background: #020253 0% 0% no-repeat padding-box;
+  opacity: 1;
 }
 
-.image-grid {
+.ImageBoxs {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Adjust columns as needed */
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 10px;
 }
 
-.image-grid img {
+.ImageBoxs .image {
   width: 100%;
   height: auto;
 }
 
-.form {
+.box {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+.image9 {
+  grid-column: 4 / 3;
+  grid-row: 1/2;
+}
+.image10 {
+  grid-column: 5 / 4;
+  grid-row: 1/2;
+}
+.image6 {
+  grid-column: 4/3;
+  grid-row: 2/3;
+}
+.image11 {
+  grid-column: 5/4;
+  grid-row: 2/3;
+}
+.image2 {
+  grid-column: ;
+  grid-row: ;
+}
+.image5 {
+  grid-column: ;
+  grid-row: ;
+}
+.image4 {
+  grid-column: ;
+  grid-row: ;
+}
+.image3 {
+  grid-column: ;
+  grid-row: ;
+}
+.image12 {
+  grid-column: ;
+  grid-row: ;
+}
+.image14 {
+  grid-column: ;
+  grid-row: ;
+}
+.image7 {
+  grid-column: 1/2;
+  grid-row: 5/6;
+}
+.image13 {
+  grid-column: 2/3;
+  grid-row: 5/6;
+}
+.image1 {
+  grid-column: ;
+  grid-row: ;
+}
+.image8 {
+  grid-column: ;
+  grid-row: ;
+}
+.FormBox {
+  grid-column: 3/5;
+  grid-row: 3/5;
+}
+
+/*  */
+
+.FormBox {
   background-color: #f0f0f0;
   padding: 20px;
   border-radius: 5px;
   text-align: center;
 }
 
-.form h2 {
+.FormBox h2 {
   margin-bottom: 20px;
 }
 
-.form input[type="text"],
-.form input[type="email"],
-.form textarea {
+.FormBox input[type="text"],
+.FormBox input[type="email"],
+.FormBox textarea {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
@@ -52,7 +125,7 @@ body {
   border-radius: 3px;
 }
 
-.form button {
+.FormBox button {
   background-color: #4caf50;
   color: white;
   padding: 10px 20px;
