--- a/projects/LandingPageProject4/project 4/style/index.css
+++ b/projects/LandingPageProject4/project 4/style/index.css
@@ -13,7 +13,7 @@ body {
   justify-items: center;
   align-items: center;
   text-align: center;
-  background-image: url("images/BackgroundWallpaper.png ");
+  background-image: url("images/Background.png");
   background-size: cover;
   background-position: center;
 }
