--- a/projects/LandingPageProject4/project 4/style/index.css
+++ b/projects/LandingPageProject4/project 4/style/index.css
@@ -16,6 +16,7 @@ body {
   background-image: url("images/Background.png");
   background-size: cover;
   background-position: center;
+  height: 100vh;
 }
 
 h1 {
