--- a/projects/LandingPageProject4/project 4/style/index.css
+++ b/projects/LandingPageProject4/project 4/style/index.css
@@ -4,19 +4,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  direction: ltr;
-}
-
-body {
   text-align: center;
   justify-content: center;
   justify-items: center;
-  align-items: center;
-  text-align: center;
-  background-image: url("project 4/images/Background.png");
+  direction: rtl;
+}
+
+body {
+  background-image: url("/images/Background.png ");
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  background-repeat: no-repeat;
+  height: 60vh;
 }
 
 h1 {
@@ -27,13 +26,16 @@ h1 {
   height: 113px;
   letter-spacing: 0px;
   opacity: 1;
-  margin-top: 5%;
+  padding-top: 50%;
   margin-bottom: 1%;
 }
 
 h4 {
   font: normal normal normal 20px/26px Assistant;
   font-size: 1rem;
+  color: white;
+  padding-top: 15%;
+  padding-bottom: 90px;
 }
 
 .form {
@@ -49,14 +51,22 @@ h4 {
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  border-bottom: 3px solid #d3e10e;
+}
+
+.form label {
+  justify-content: right;
+  text-align: right;
+  padding: 5px;
 }
 
 .form button {
   background-color: #d3e10e;
   color: #000;
   border: none;
-  padding: 15px 30px;
+  padding: 10px 50px;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 10px;
+  font-weight: bold;
 }
