--- a/projects/LandingPageProject6/project 6/style/index.css
+++ b/projects/LandingPageProject6/project 6/style/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  position: ltr;
 }
 
 .headerContainer {
@@ -10,6 +11,14 @@
   width: 0 auto;
   height: 580px;
   text-align: center;
+}
+/* Need to add ICON */
+.IconWhatsapp {
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  width: 50px;
+  height: 50px;
 }
 
 .headerContainer h1 {
@@ -44,7 +53,6 @@
   padding: 30px;
   gap: 10px;
   height: 400px;
-  border: 10px solid black; /* Remove */
 }
 
 .Box {
@@ -81,47 +89,53 @@
 }
 
 .FooterBox {
-  width: 0 auto;
-  height: 500px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 20px;
   background-color: #f8f8f8;
-  border: 10px solid black; /* Remove */
 }
 
 .footerLeft {
-  /*  flex: 1; */
+  /* flex: 1; */
   text-align: left;
   background-color: #f0ffff;
 }
 
-.footerRight {
-  /* flex: 1; */
-  text-align: right;
-  background-color: #0ee1e1;
-  height: 600px;
-  width: 600px;
-}
-
-/* .FooterLeft,
-.FooterRight {
-  width: 45%;
-} */
-
-.FooterRight img {
-  height: 400px;
-  width: 400px;
-  background-color: #0ee1e1;
-}
 .FooterForm {
   justify-content: center;
   align-items: center;
   text-align: center;
 }
+
+.FooterForm form label,
+.FooterForm form input,
+.FooterForm form button {
+  display: block;
+  width: 100%;
+  margin-bottom: 1px;
+  text-align: right;
+}
+
+.FooterForm form input,
+.FooterForm form button {
+  padding: 10px;
+  border: none;
+  background-color: #e5eeff;
+}
+
+.FooterForm form textarea {
+  border-bottom: 3px solid #0ee1e1;
+  background-color: #e5eeff;
+}
+
+.FooterForm form input {
+  border-bottom: 3px solid #0ee1e1;
+}
+
 .FooterForm h2 {
   font-weight: bold;
   font-size: 18pt;
+  text-align: end;
 }
 
 .FooterForm p {
@@ -137,5 +151,51 @@
 .FooterForm form label {
   font-weight: bold;
   font-size: 14pt;
+  padding: 10px;
+}
+
+.FooterForm form button {
+  background-color: #0ee1e1;
+  color: black;
+  font-weight: bolder;
+  text-align: center;
+  width: 300px;
+  margin: 10px auto 0 auto;
+  display: block;
+}
+
+.FooterRight {
+  /* flex: 1; */
+  background-color: #0ee1e1;
+  margin: 0 auto;
+  padding: 50px;
+  height: 100%;
+}
+
+.footerRight {
+  text-align: right;
+  background-color: #0ee1e1;
+  height: 600px;
+  width: 600px;
+}
+
+.FooterRight img {
+  height: 600px;
+  width: 600px;
+  background-color: #0ee1e1;
+}
+
+.ContactIcons {
+  border-bottom: 20px solid #0ee1e1;
+}
+
+.ContactIcons img {
+  display: flex;
+  justify-content: space-around;
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  border-radius: 30px;
+  background-color: #0ee1e1;
   padding: 10px;
 }
