--- a/projects/LandingPageProject6/project 6/style/index.css
+++ b/projects/LandingPageProject6/project 6/style/index.css
@@ -14,8 +14,8 @@
 }
 
 .WhatsappBox {
-  top: 30px;
-  left: 0;
+  top: 50px;
+  left: 50px;
   position: absolute;
   background-color: white;
   cursor: pointer;
