--- a/style/index.css
+++ b/style/index.css
@@ -246,6 +246,10 @@ body {
 }
 
 .Form label {
+  display: flex;
+  text-align: left;
+  margin-left: 100px;
+  /* justify-content: flex-start; */
   font-weight: bold;
   margin-bottom: 4px;
   left: 0;
@@ -263,11 +267,15 @@ body {
   box-sizing: border-box;
   resize: vertical;
 }
-.Form textarea {
+
+.Form extarea {
+  resize: none;
   text-align: left;
+  width: 120px;
+  width: 50px;
 }
 
-.Form input[type="submit"] {
+.Form input[type="button"] {
   padding: 10px 20px;
   border: none;
   border-radius: 30px;
