--- a/style/index.css
+++ b/style/index.css
@@ -16,6 +16,10 @@ body {
   scroll-margin-top: 60px;
 }
 
+.CHECKBOX {
+  display: none;
+}
+
 .NavBarFixed {
   position: fixed;
   top: 0;
@@ -209,11 +213,11 @@ body {
 
 .Contact {
   /*   background-image: url("Images/EmailBackgroundPicture.jpg"); */
-  background-size: cover;
+  /*   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
-  min-height: 50vh;
+  background-position: center; */
+  /*  min-height: 50vh; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -249,7 +253,6 @@ body {
   display: flex;
   text-align: left;
   margin-left: 100px;
-  /* justify-content: flex-start; */
   font-weight: bold;
   margin-bottom: 4px;
   left: 0;
@@ -310,63 +313,118 @@ body {
   color: darkcyan;
   font-size: 10pt;
 }
-
-@media (max-width: 768px) {
-  .NavBar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .NavBarFixed ul {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .NavBarFixed ul li {
-    margin: 5px 0;
-  }
-
-  .ProfilePictureNavBar {
-    width: 40px;
-    height: 40px;
-  }
-
-  .SocialMediaBar {
-    flex-direction: column;
-    height: auto;
-  }
-
-  .SocialMediaBar svg {
-    margin: 5px 0;
-  }
-}
+/* ----------------Responsive---------------- */
 
 @media (max-width: 480px) {
-  .NavBar {
-    padding: 5px;
+  body {
+    width: 100%;
+    height: 100vh; /* need to change */
+    position: relative;
   }
 
-  .NavBarFixed ul li a {
-    font-size: 14px;
+  /* Need to fix the navbar icon */
+  .NavBarFixed .NavBar {
+    display: none;
+    color: black;
+    left: 0;
+    width: 20vw;
+  }
+
+  .Button {
+    display: block;
+    color: black;
+    left: 0;
+    width: 20vw;
+  }
+
+  .Button:hover .NavBar li a {
+    display: block;
   }
 
   .Home {
-    margin-bottom: 100px;
+    height: 70vw;
   }
 
-  .ProfilePictureNavBar {
-    width: 30px;
-    height: 30px;
+  .AboutMe {
+    font-size: 4vw;
+    line-height: 5vh;
+  }
+
+  .Contact {
+    height: 10vh;
+  }
+
+  .TechnologyPicture img {
+    height: 9vw;
+  }
+
+  .ProjectContainer {
+    width: 70vw;
+    height: 50vw;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .ProjectBox {
+    display: grid;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 50px;
+  }
+
+  .ProjectContainer {
+    width: 100vw;
+    height: 90vw;
+  }
+
+  .ProjectContainer p {
+    padding-bottom: 2%;
+    padding-top: 10px;
+  }
+
+  .ProjectContainer img {
+    width: 90vw;
+    border-radius: 30px;
+    margin: 5px;
+    padding: 10px;
+    box-shadow: 0 0 5px black;
+    background-color: darkcyan;
+  }
+
+  .ContactMe {
+    position: absolute;
+    bottom: 0; /* Stick the form to the bottom */
+    width: 100%;
+    max-width: 100vw; /* Ensure the form spans the full width of the screen */
+    padding: 20px;
+  }
+
+  .Form label {
+    display: flex;
+    text-align: left;
+    margin-left: 5vw;
+    font-weight: bold;
+    margin-bottom: 1vh;
+    text-align: center;
+  }
+
+  .SocialMediaBar {
+    bottom: 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
   }
 
   .SocialMediaBar svg {
-    width: 15px;
-    height: 15px;
-    flex-direction: column;
-    display: flex;
+    width: 8vw;
+    height: 8vw;
   }
 
   .Footer {
-    font-size: 8pt;
+    font-size: 3vw;
+    bottom: 0vw;
   }
 }
