--- a/style/index.css
+++ b/style/index.css
@@ -212,12 +212,6 @@ body {
 }
 
 .Contact {
-  /*   background-image: url("Images/EmailBackgroundPicture.jpg"); */
-  /*   background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center; */
-  /*  min-height: 50vh; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -315,6 +309,8 @@ body {
 }
 /* ----------------Responsive---------------- */
 
+/* Responsive for Phone */
+
 @media (max-width: 480px) {
   body {
     width: 100%;
@@ -359,24 +355,10 @@ body {
   }
 
   .ProjectContainer {
-    width: 70vw;
-    height: 50vw;
-    text-align: center;
-    justify-content: center;
-  }
-
-  .ProjectBox {
-    display: grid;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(2, auto);
-    gap: 50px;
-  }
-
-  .ProjectContainer {
     width: 100vw;
     height: 90vw;
+    text-align: center;
+    justify-content: center;
   }
 
   .ProjectContainer p {
@@ -393,12 +375,33 @@ body {
     background-color: darkcyan;
   }
 
+  .ProjectBox {
+    display: grid;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 50px;
+  }
+
   .ContactMe {
-    position: absolute;
-    bottom: 0; /* Stick the form to the bottom */
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding: 10px;
     width: 100%;
-    max-width: 100vw; /* Ensure the form spans the full width of the screen */
+    height: 1000vw;
+    max-width: 100vw;
+    bottom: 0;
+    width: 100%;
+    max-width: 100vw;
     padding: 20px;
+  }
+
+  .Form {
+    padding: 10px;
+    width: 90%;
+    margin: 0 auto;
   }
 
   .Form label {
@@ -426,5 +429,6 @@ body {
   .Footer {
     font-size: 3vw;
     bottom: 0vw;
+    position: absolute;
   }
 }
