--- a/style/index.css
+++ b/style/index.css
@@ -16,6 +16,17 @@ body {
   scroll-margin-top: 60px;
 }
 
+input[type="checkbox"] {
+  display: none;
+}
+#hamburger {
+  display: none;
+  font-size: 24px;
+  padding: 1em;
+  text-align: center;
+  cursor: pointer;
+}
+
 .CHECKBOX {
   display: none;
 }
@@ -318,12 +329,20 @@ body {
     position: relative;
   }
 
-  /* Need to fix the navbar icon */
-  .NavBarFixed .NavBar {
+  #hamburger {
+    display: block;
+  }
+
+  input[type="checkbox"]:checked ~ .navbar-links {
+    display: block;
+  }
+
+  .navbar-links {
     display: none;
-    color: black;
-    left: 0;
-    width: 20vw;
+  }
+
+  nav {
+    flex-direction: column;
   }
 
   .Button {
@@ -381,7 +400,8 @@ body {
     flex-wrap: wrap;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(2, auto);
-    gap: 50px;
+    gap: 20px;
+    margin-bottom: 20px;
   }
 
   .ContactMe {
