--- a/style/index.css
+++ b/style/index.css
@@ -339,6 +339,14 @@ input[type="checkbox"] {
 
   .navbar-links {
     display: none;
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar-links a {
+    display: block;
+    padding: 10px 0;
+    border-bottom: 1px solid #ccc;
   }
 
   nav {
