--- a/style/index.css
+++ b/style/index.css
@@ -343,7 +343,7 @@ input[type="checkbox"] {
     text-align: center;
   }
 
-  .navbar-links a {
+  .navbar-flinks a {
     display: block;
     padding: 10px 0;
     border-bottom: 1px solid #ccc;
