--- a/style/index.css
+++ b/style/index.css
@@ -414,38 +414,39 @@ input[type="checkbox"] {
     margin-bottom: 20px;
   }
 
-  .ContactMe {
-    display: none; /* remove it */
+  .ContactMe form {
+    display: block;
     position: relative;
+    bottom: 0;
+    top: 420vw; /* fix */
     margin-top: 20px;
     margin-bottom: 10px;
+    margin: 0 auto;
     padding: 10px;
     width: 100%;
-    height: 1000vw;
+    height: auto;
     max-width: 100vw;
-    bottom: 0;
     width: 100%;
     max-width: 100vw;
     padding: 20px;
   }
 
-  .Form {
-    padding: 10px;
-    width: 90%;
-    margin: 0 auto;
-  }
-
   .Form label {
     display: flex;
     text-align: left;
-    margin-left: 5vw;
+    margin-left: 13vw;
     font-weight: bold;
     margin-bottom: 1vh;
     text-align: center;
   }
-
+  .Form h2 {
+    color: black;
+    padding: 5px;
+  }
   .SocialMediaBar {
-    display: none; /* remove */
+    display: block;
+    bottom: 0;
+    top: 1200vw;
     bottom: 0;
     position: absolute;
     bottom: 0;
@@ -459,9 +460,12 @@ input[type="checkbox"] {
   }
 
   .Footer {
-    display: none; /* remove */
+    display: block;
+    top: 1210vw;
+    bottom: 0;
     font-size: 3vw;
     bottom: 0vw;
+    background-color: black;
     position: absolute;
   }
 }
