--- a/projects/LandingPageProject1/Project 1/index.css
+++ b/projects/LandingPageProject1/Project 1/index.css
@@ -122,13 +122,17 @@ button:hover {
 
   label {
     display: block;
+    justify-content: center;
     text-align: right;
     right: 0;
     margin-bottom: 0.5rem;
   }
 
-  input,
-  button {
+  input {
     width: 100%;
   }
+}
+button {
+  justify-content: center;
+  text-align: center;
 }
